# drift

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  codecov.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/architecture/: README.md  arch-pipeline-dark.config.json  arch-pipeline-light.config.json  arch-pipeline.mmd  architecture-diagram.mmd  build_arch.py  build_arch_raster.mjs
assets/brand/: README.md  build_banner.py  build_banner_raster.mjs
assets/demo-voiceover/: README.md
assets/evidence/: 2026-07-15-hosted-vllm-briefing.json  2026-07-15-hosted-vllm-briefing.manifest.json  2026-07-16-all-sources-luna.json  2026-07-16-all-sources-luna.manifest.json  2026-07-16-all-sources-reviewed.manifest.json  2026-07-17-all-sources-reviewed.json  2026-07-17-all-sources-reviewed.manifest.json  2026-07-17-all-sources-sol.manifest.json  2026-07-18-all-sources-terra.json  2026-07-18-all-sources-terra.manifest.json  README.md
backend/: __init__.py  evidence_archive.py  main.py  pipeline.py  requirements.txt  review.py  sources.yaml
backend/agents/: __init__.py  base.py  briefing.py  insight.py  scout.py  synthesizer.py
backend/core/: budget.py  config.py  live_store.py  model_router.py  resilience.py  store.py  versioning.py
backend/fixtures/: insights.json
backend/models/: __init__.py  schema.py
docs/: ARCHITECTURE.md  BUILD_SEQUENCE.md  CODEX_PROMPTS.md  INITIATIVES.md  RUNBOOK.md
docs/adr/: 001-fixture-first-judge-path.md  002-typed-agents-no-framework.md  003-citations-and-visible-uncertainty.md  004-local-budget-guard.md  005-postgres-pgvector-live-store.md  006-ci-quality-gates.md  007-vercel-railway-deployment.md  008-live-grounded-chat.md  009-bounded-model-resilience-and-locked-delivery.md  010-claim-evidence-and-review-gate.md  (+3 more)
frontend/: Dockerfile  package-lock.json  package.json  vercel.json
integrations/: __init__.py
migrations/: __init__.py  env.py
notebooks/: README.md  drift_manual_run.ipynb  drift_manual_run.luna.results.ipynb  drift_manual_run.results.ipynb  drift_manual_run.sol.results.ipynb  drift_manual_run.terra.results.ipynb
scripts/: README.md  backfill_upstream_release_type.py  check_openai_spend.py  generate_demo_voiceover.py
submission/: DEMO_SCRIPT.md  DEVPOST.md  DEVPOST_README.md  DRIFT_FREEZE_PLAN.md  NEXT_STEPS.md  SUBMISSION.md
tests/: __init__.py  conftest.py
(+48 files in other folders)
