[project]
name = "drift-release-intelligence"
version = "1.0.0"
description = "Release intelligence for GPU and AI-infrastructure teams"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "feedparser>=6.0.12",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
# Thin-client MCP integration (ADR-011). Kept out of the core dependency set so
# the backend lockfile, Docker image, and Railway deployment are unchanged; the
# server holds no credentials and only needs the SDK and an HTTP client.
mcp = [
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]

# The MCP integration tests run separately from the backend coverage gate
# (see the Makefile `test-integrations` target); this group installs the SDK
# and the pytest tooling they need without touching the core lockfile.
integrations = [
    "mcp>=1.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "integrations", "tests"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
# Type-check package sources, not test modules — mirrors `mypy backend`, which
# never covered tests. The integrations tests use duck-typed fakes on purpose.
exclude = ['(^|/)tests/']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 100
